# grpc-server-client-template

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml  test.yml
examples/: client.py  server.py
protos/: ping.proto
src/: ping_grpc.py  ping_pb2.py  ping_pb2.pyi
src/hypergrpc/: __init__.py  server.py
src/hypergrpc/services/: __init__.py  ping.py
test/: test_base.py
