[project]
name = "hypergrpc"
version = "0.0.0"
description = "A hypermodern python package starter template to start with a Python gRPC server<=>client w/ Protobufs."
authors = [{ name = "michealroberts", email = "michael@observerly.com" }]
maintainers = [{ name = "Michael Roberts", email = "michael@observerly.com" }]
keywords = [
    "grpc",
    "grpc-server",
    "grpc-client",
    "rpc",
    "protobuf",
    "proto3",
    "uv",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = ["grpclib>=0.4.8", "protobuf>=6.31.1"]

[project.urls]
Source = "https://github.com/michealroberts/grpc-server-client-template"
Issues = "https://github.com/michealroberts/grpc-server-client-template/issues"
PullRequests = "https://github.com/michealroberts/grpc-server-client-template/pulls"
Discussions = "https://github.com/michealroberts/grpc-server-client-template/discussions"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "grpcio-tools>=1.73.0",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.7",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_default_fixture_loop_scope = "session"
